[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", default-features = false }
tokio-util = { version = "0.7.8", features = ["codec"] }
